--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		
 	</section>
 
-	<script src="jquery-3.2.1.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="game.js"></script>
 
 </body>
